--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>SocketIO チャットテスト</title>
-    <link rel="stylesheet" href="style.css" type="text/css" media="all">
-  </head>
-  <body>
-    <h1>SocketIOチャット</h1>
+<head>
+  <meta charset="UTF-8">
+  <title>SocketIOチャット</title>
+  <link rel="stylesheet" href="style.css" type="text/css" media="all">
+</head>
+<body>
 
-    <!-- STEP1. 接続中 -->
-    <section id="nowconnecting">
-      ...サーバに接続中
-    </section>
+<h1>SocketIOチャット</h1>
 
-    <!-- STEP2. 名前を入力 -->
-    <section id="inputmyname">
-      <p>名前を入力</p>
-      <form id="frm-myname">
-        <input type="text" id="txt-myname">
-        <button>入室</button>
-      </form>
-    </section>
+<!-- STEP1. 接続中 -->
+<section id="nowconnecting">
+  ...サーバに接続中
+</section>
+<!-- /接続中 -->
 
-    <!-- STEP3. チャット開始 -->
-    <section id="chat">
-      <form id="frm-post">
-        <span id=myname></span>&nbsp;<input type="text" id="msg">
-        <button>送信</button>
-      </form>
+<!-- STEP2. 名前を入力 -->
+<section id="inputmyname">
+  <p>あなたの名前を入力してください</p>
+  <form id="frm-myname" method="POST" action="main" autocomplete="off">
+    <input type="text" id="txt-myname">
+    <button>入室</button>
+  </form>
+</section>
+<section>
+  <form method="POST" action="main" name="form1" id="btn-change" >
+    <button>画面遷移</button>
+  </form>
+</section>
+<!-- /名前を入力 -->
 
-      <section id="chat-main">
-        <!-- 発言ログ -->
-        <ul id="msglist"></ul>
+<!-- STEP3. チャット開始 -->
+<section id="chat">
+  <!-- 発言フォーム -->
+  <form id="frm-post" autocomplete="off">
+    <span id="myname"></span><br>
+    <input type="text" id="msg">&nbsp;&nbsp;<button>送信</button>
+  </form>
 
-        <!-- メンバー一覧 -->
-        <ul id="memberlist"></ul>
-      </section>
+  <section id="chat-main">
+    <!-- 発言ログ -->
+    <ul id="msglist"></ul>
 
-      <!-- ログアウト -->
-      <form id="frm-quit">
-        <button>退出する</button>
-      </form>
-    </section>
+    <!-- メンバー一覧 -->
+    <ul id="memberlist"></ul>
+  </section>
 
-    <!--<script src="/socket.io/socket.io.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.js"></script>
-    <script src="util.js"></script>
-    <script src="app.js"></script>
-  </body>
+  <!-- ログアウト -->
+  <form id="frm-quit">
+    <button>退室する</button>
+  </form>
+</section>
+<!-- /チャット本体 -->
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="util.js"></script>
+<script src="app.js"></script>
+
+</body>
 </html>
